compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__labeled_while.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: While {
                                    label: Some(
                                        Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 9,
                                                end: 15,
                                                start_line: 1,
                                                start_col: 10,
                                            },
                                        },
                                    ),
                                    condition: Expr {
                                        kind: Literal(
                                            Literal {
                                                kind: Bool(
                                                    true,
                                                ),
                                                span: Span {
                                                    start: 23,
                                                    end: 27,
                                                    start_line: 1,
                                                    start_col: 24,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 23,
                                            end: 27,
                                            start_line: 1,
                                            start_col: 24,
                                        },
                                    },
                                    body: Block {
                                        statements: [],
                                        expr: Some(
                                            Expr {
                                                kind: Continue {
                                                    label: Some(
                                                        Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 39,
                                                                end: 45,
                                                                start_line: 1,
                                                                start_col: 40,
                                                            },
                                                        },
                                                    ),
                                                },
                                                span: Span {
                                                    start: 30,
                                                    end: 45,
                                                    start_line: 1,
                                                    start_col: 31,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 28,
                                            end: 47,
                                            start_line: 1,
                                            start_col: 29,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 17,
                                    end: 47,
                                    start_line: 1,
                                    start_col: 18,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 49,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 49,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 49,
        start_line: 1,
        start_col: 1,
    },
}
